--- a/client/Homepage.css
+++ b/client/Homepage.css
@@ -60,8 +60,16 @@
   top: 0;
 }
 
-.h2 {
+.h1 {
   font-size: 2.5vw;
+  color: blue;
+  margin: 0 auto;
+  text-align: center;
+  font-weight: bold;
+}
+
+.h2 {
+  font-size: 1.5vw;
   color: blue;
   margin: 0 auto;
   text-align: center;
