--- a/mern/client/src/App.css
+++ b/mern/client/src/App.css
@@ -8,7 +8,7 @@ body {
     background-size: cover;
     display: flex;
     align-items: center;
-    height: 96px;
+    height: 100px;
     padding: 20px;
 }
 
@@ -18,7 +18,11 @@ body {
 }
 
 .header--tabs {
-    margin-right: 10px;
+    margin-right: 24px;
+}
+
+.header--profile {
+    width: 80px;
 }
 
 .tab {
@@ -27,6 +31,7 @@ body {
     padding: 5px 5px;
     border-radius: 12px;
     border: none;
+    display: inline;
 }
 
 .tab:hover {
